--- a/website/css/base.css
+++ b/website/css/base.css
@@ -2,6 +2,7 @@
 html,body{  font-family: '微软雅黑'; font-size: 12px; color: #333; background-color: #FFF; }
 ul,ol,li{ list-style: none; }
 ul,ol,li,h1,h2,h3,h4,h5,p,dl,dt,dd{ margin: 0; }
+label{ font-weight: normal; }
 
 a:focus{ outline: none; }
 
