所有页面  remark.txt有所有记录

--- a/website/css/base.css
+++ b/website/css/base.css
@@ -16,3 +16,7 @@ a:focus{ outline: none; }
 .ttc{ text-align: center; }
 .ttr{ text-align: right; }
 .ttl{ text-align: left; }
+
+.ui-widget-header .ui-icon {
+    background-image: url("../images/ui-icons_444444_256x240.png");
+}
